# dyun-gu-dev

./: Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
crates/dg-capi/: Cargo.toml  cbindgen.toml
crates/dg-capi/examples/: basic.c  direct_backend.c
crates/dg-capi/include/: dg_capi.h
crates/dg-capi/src/: lib.rs
crates/dg-cli/: Cargo.toml
crates/dg-cli/src/: lib.rs  main.rs
crates/dg-core/: Cargo.toml
crates/dg-core/src/: buffer.rs  datatype.rs  deployment.rs  detection.rs  device.rs  error.rs  format.rs  lib.rs  memory.rs  quantization.rs  shape.rs  stream.rs  tensor.rs
crates/dg-core/tests/: core.rs
crates/dg-elements/: Cargo.toml
crates/dg-elements/src/: extras.rs  lib.rs  math.rs  parallel.rs  tools.rs  yolo.rs
crates/dg-elements/tests/: elements.rs  extras.rs  http_push.rs
crates/dg-graph/: Cargo.toml
crates/dg-graph/src/: builtin.rs  element.rs  engine.rs  inference.rs  lib.rs  metrics.rs  packet.rs  pipe.rs  pool.rs  registry.rs  schema.rs  spec.rs
crates/dg-graph/tests/: execution.rs  graph_spec.rs  pipeline.rs
crates/dg-media/: Cargo.toml
crates/dg-media-avcodec/: Cargo.toml
crates/dg-media-avcodec/src/: lib.rs
crates/dg-media/src/: avcodec.rs  bridge.rs  elements.rs  frame.rs  lib.rs  mock.rs  ops.rs  planner.rs  stream_metadata.rs
crates/dg-media/tests/: media_pipeline.rs
crates/dg-openvino/: Cargo.toml
crates/dg-openvino/src/: backend.rs  binding.rs  lib.rs  tests.rs
crates/dg-openvino/tests/: openvino_runtime.rs
crates/dg-rknn/: Cargo.toml  build.rs
crates/dg-rknn/src/: backend.rs  io.rs  lib.rs  mock_sys.rs
crates/dg-runtime/: Cargo.toml
crates/dg-runtime/src/: backend.rs  capabilities.rs  error.rs  lib.rs  mock.rs  option.rs  regression.rs  runtime.rs  tensor_info.rs
crates/dg-runtime/tests/: capabilities.rs  regression.rs  runtime.rs
crates/dg-runtime/tests/fixtures/: mock_identity_f32.json
crates/dg-scheduler/: Cargo.toml
crates/dg-scheduler/src/: lib.rs
crates/dg-sophon/: Cargo.toml  build.rs
crates/dg-sophon/src/: backend.rs  convert.rs  lib.rs  mock_sys.rs  validate.rs
crates/dg-sophon/tests/: integration.rs  no_hardware.rs
crates/dg-stream/: Cargo.toml
crates/dg-stream-cheetah/: Cargo.toml
crates/dg-stream-cheetah/src/: lib.rs
crates/dg-stream/src/: bridge.rs  connector.rs  elements.rs  embedded.rs  error.rs  hub.rs  ids.rs  lib.rs  mock.rs  stream.rs  track.rs
crates/dg-stream/tests/: cheetah_connector.rs  elements.rs
crates/dg-tensorrt/: Cargo.toml  build.rs
crates/dg-tensorrt-sys/: Cargo.toml
crates/dg-tensorrt-sys/src/: lib.rs
crates/dg-tensorrt/src/: backend.rs  convert.rs  lib.rs  mock_sys.rs
dev-docs/002_fix_avcodec_profile_plan2/: 01_execution_contract_and_baseline.md  02_current_implementation_audit.md  03_dependency_and_feature_convergence.md  04_sdk_boundary_and_crate_roles.md  05_runtime_profile_contract.md  06_high_level_session_factory.md  07_packet_image_and_metadata_bridge.md  08_decode_encode_elements.md  09_image_processing_elements.md  10_transcoder_and_graph_integration.md  11_hardware_profile_integration.md  12_errors_diagnostics_and_observability.md  13_entrypoints_and_legacy_migration.md  14_test_matrix_and_ci.md  15_release_acceptance_and_rollback.md  README.md
docs/: design-remaining-tasks.md  design.md  user-guide.md
docs/upstream/: avcodec-rs-gaps.md  avcodec-rs-media01-requirements.md  cheetah-media-server-rs-connector-gaps.md  cheetah-media-server-rs-gaps.md
examples/: mock-multi-algorithm.yaml  mock-multi-stream-demo.yaml
