[workspace]
resolver = "2"
members = [
    "crates/dg-core",
    "crates/dg-runtime",
    "crates/dg-scheduler",
    "crates/dg-graph",
    "crates/dg-elements",
    "crates/dg-capi",
    "crates/dg-cli",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/dyun-gu-dev/dyun-gu-dev"
rust-version = "1.83"

[workspace.dependencies]
half = "2"
thiserror = "1"
tracing = "0.1"
proptest = { version = "1", default-features = false, features = ["std"] }

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
wildcard_imports = "allow"
