[workspace]
resolver = "2"
members = [
    "crates/dg-core",
    "crates/dg-runtime",
    "crates/dg-openvino",
    "crates/dg-sophon",
    "crates/dg-rknn",
    "crates/dg-tensorrt",
    "crates/dg-scheduler",
    "crates/dg-graph",
    "crates/dg-media",
    "crates/dg-stream",
    "crates/dg-elements",
    "crates/dg-capi",
    "crates/dg-cli",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/dyun-gu-dev/dyun-gu-dev"
rust-version = "1.96.1"

[workspace.dependencies]
half = "2"
inventory = "0.3"
indexmap = "=2.3.0"
async-trait = "0.1"
bindgen = "0.70"
bytes = { version = "1", features = ["serde"] }
cc = "=1.2.57"
openvino = { version = "0.11", default-features = false }
futures = "0.3"
smallvec = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
toml = "0.8"
thiserror = "1"
tracing = "0.1"
proptest = { version = "1", default-features = false, features = ["std"] }

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
wildcard_imports = "allow"
