[package]
name = "dg-elements"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dg-core = { path = "../dg-core" }
dg-graph = { path = "../dg-graph" }
inventory.workspace = true
serde_json.workspace = true

[dev-dependencies]
proptest.workspace = true
