[package]
name = "dg-media-avcodec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
avcodec = [
    "dep:avcodec-core",
    "dep:avcodec-backend-jpeg",
    "dep:avcodec-backend-zune",
]

[dependencies]
avcodec-core = { git = "https://github.com/TimothyWalker6922/avcodec-rs-develop.git", rev = "8ef5a72a50b396bad1a670fc2757893c059191a4", package = "avcodec-core-model", default-features = false, features = ["std"], optional = true }
avcodec-backend-jpeg = { git = "https://github.com/TimothyWalker6922/avcodec-rs-develop.git", rev = "8ef5a72a50b396bad1a670fc2757893c059191a4", package = "avcodec-backend-jpeg", default-features = false, optional = true }
avcodec-backend-zune = { git = "https://github.com/TimothyWalker6922/avcodec-rs-develop.git", rev = "8ef5a72a50b396bad1a670fc2757893c059191a4", package = "avcodec-backend-zune", default-features = false, optional = true }
