[package]
name = "dg-media-avcodec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
avcodec = [
    "dep:avcodec",
]

[dependencies]
avcodec = { git = "https://github.com/TimothyWalker6922/avcodec-rs-develop.git", rev = "8ef5a72a50b396bad1a670fc2757893c059191a4", package = "avcodec", default-features = false, features = ["native-free-software"], optional = true }
