[package]
name = "dg-media-avcodec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
avcodec = [
    "dep:avcodec",
]
codec-ffmpeg = ["avcodec", "avcodec/ffmpeg"]
codec-x264 = ["avcodec", "avcodec/x264"]
codec-x265 = ["avcodec", "avcodec/x265"]
codec-openh264 = ["avcodec", "avcodec/openh264"]
codec-rkmpp = ["avcodec", "avcodec/rkmpp"]
codec-librga = ["avcodec", "avcodec/librga"]
codec-nvcodec = ["avcodec", "avcodec/nvcodec"]
codec-onevpl = ["avcodec", "avcodec/onevpl"]
codec-amf = ["avcodec", "avcodec/amf"]

[dependencies]
avcodec = { git = "https://github.com/TimothyWalker6922/avcodec-rs-develop.git", rev = "8ef5a72a50b396bad1a670fc2757893c059191a4", package = "avcodec", default-features = false, features = ["jpeg", "zune", "libyuv"], optional = true }
