[package]
name = "dg-openvino"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
backend = ["dep:openvino", "openvino/runtime-linking"]

[dependencies]
dg-core = { path = "../dg-core" }
dg-runtime = { path = "../dg-runtime" }
inventory.workspace = true
openvino = { workspace = true, optional = true, default-features = false }
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
