[package]
name = "dg-sophon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
build = "build.rs"

[features]
default = []
backend = ["dep:libc"]
# Build for on-chip (SoC) deployment; the default targets Host (PCIe).
soc = ["backend"]

[dependencies]
dg-core = { path = "../dg-core" }
dg-runtime = { path = "../dg-runtime" }
inventory.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
libc = { workspace = true, optional = true }

[build-dependencies]
bindgen.workspace = true
