[package]
name = "dg-stream"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
cheetah = ["dep:dg-stream-cheetah", "dg-stream-cheetah/cheetah", "dep:tokio"]

[dependencies]
async-trait.workspace = true
bytes.workspace = true
dg-core = { path = "../dg-core" }
dg-graph = { path = "../dg-graph" }
dg-media = { path = "../dg-media" }
futures.workspace = true
inventory.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "time"], optional = true }

[dependencies.dg-stream-cheetah]
path = "../dg-stream-cheetah"
optional = true

[dev-dependencies]
proptest.workspace = true
