[package]
name = "dg-tensorrt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
backend = ["dep:dg-tensorrt-sys", "dg-tensorrt-sys/backend"]

[dependencies]
dg-core = { path = "../dg-core" }
dg-runtime = { path = "../dg-runtime" }
dg-tensorrt-sys = { path = "../dg-tensorrt-sys", optional = true }
inventory.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
